[test] Fix test to compile on current GEF Classic
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>