@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2010, 2019 THALES GLOBAL SERVICES.
+ * Copyright (c) 2010, 2024 THALES GLOBAL SERVICES and others.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -200,9 +200,11 @@ public class PaletteReloadAfterVSMChangeTest extends AbstractPaletteManagerTest 
     }
 
     private SectionPaletteDrawer getSectionEntry() {
-        Stream<SectionPaletteDrawer> sectionPaletteDrawersStream = paletteRoot.getChildren().stream().filter(SectionPaletteDrawer.class::isInstance)
-                .filter(entry -> sectionToModify != null && sectionToModify.getName().equals(((SectionPaletteDrawer) entry).getId()));
-        List<SectionPaletteDrawer> sectionPaletteDrawers = sectionPaletteDrawersStream.collect(Collectors.toList());
+        List<SectionPaletteDrawer> sectionPaletteDrawers = paletteRoot.getChildren().stream()
+                .filter(SectionPaletteDrawer.class::isInstance)
+                .map(SectionPaletteDrawer.class::cast)
+                .filter(entry -> sectionToModify != null && sectionToModify.getName().equals(((SectionPaletteDrawer) entry).getId()))
+                .toList();
 
         if (sectionPaletteDrawers.size() != 1) {
             throw new IllegalArgumentException("Palette should have only one section to modify.");
